--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,3 @@
 <h1>Welcome to Yelpdemo</h1>
-<p>This is one of the sample applications for BaseRails, a platform that teaches people to build awesome custom websites with the Ruby on Rails programing language.</p>
+<p>This is one of the sample applications for<a href = "http://www.baserails.com"> BaseRails</a>, a platform that teaches people to build awesome custom websites with the Ruby on Rails programing language. Sign up and start learning today!</p>
 
