--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,6 +1,10 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Restaurants</h1>
+<div class="jumbotron">
+  <h2>Yelpdemo is the best way to find reviews on local resturant</h2>
+  <h3>People use Yelp to search for everything from the city's tastiest burger to the most renowned cardiologist. What will you uncover in your neighborhood? </h3>
+
+</div>
 
 <table class="table table-hover table-condensed">
   <thead>
